--- a/Boutique-FE/src/pages/sign-up/sign-up.component.html
+++ b/Boutique-FE/src/pages/sign-up/sign-up.component.html
@@ -1,74 +1,76 @@
-<div class="signup-container">
-  <!-- Logo Section -->
-  <div class="logo-container">
-    <img src="./media/mo1.png" class="logo" />
+<div class="lo">
+  <div class="signup-container">
+    <!-- Logo Section -->
+    <div class="logo-container">
+      <img src="./media/mo1.png" class="logo" />
+    </div>
+  
+    <h2>Sign Up</h2>
+  
+    <form [formGroup]="signup" (ngSubmit)="onSignUp()" class="form-container">
+      <!-- Email Field -->
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input 
+          type="name" 
+          class="form-control" 
+          formControlName="name" 
+          name="name" 
+          required />
+        
+        <!-- Display Validation Errors for Email -->
+       
+      </div>
+  
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input 
+          type="email" 
+          class="form-control" 
+          formControlName="email" 
+          name="email" 
+          required />
+        
+        <!-- Display Validation Errors for Email -->
+        <div *ngIf="signup.get('email')?.invalid && signup.get('email')?.touched" class="error">
+          <p *ngIf="signup.get('email')?.hasError('required')">Email is required</p>
+          <p *ngIf="signup.get('email')?.hasError('email')">Enter a valid email</p>
+        </div>
+      </div>
+  
+      <!-- Password Field -->
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input 
+          type="password" 
+          class="form-control" 
+          formControlName="password"
+          name="password" 
+          required />
+        
+        <!-- Display Validation Errors for Password -->
+        <div *ngIf="signup.get('password')?.invalid && signup.get('password')?.touched" class="error">
+          <p *ngIf="signup.get('password')?.hasError('required')">Password is required</p>
+          <p *ngIf="signup.get('password')?.hasError('minlength')">Password must be at least 6 characters long</p>
+        </div>
+        
+      </div>
+      <div class="form-group">
+        <label for="phonenumber">Phone Number</label>
+        <input 
+          type="phonenumber" 
+          class="form-control" 
+          formControlName="phonenumber"
+          name="phonenumber" 
+          required />
+        
+        
+        
+      </div>
+  
+      <button type="submit" [disabled]="signup.invalid" class="signup-button">Sign Up</button>
+    </form>
+  
+    <p id="navigate">Already have an account? <button class="login-button" (click)="goTologin()">Login</button></p>
   </div>
-
-  <h2>Sign Up</h2>
-
-  <form [formGroup]="signup" (ngSubmit)="onSignUp()" class="form-container">
-    <!-- Email Field -->
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input 
-        type="name" 
-        class="form-control" 
-        formControlName="name" 
-        name="name" 
-        required />
-      
-      <!-- Display Validation Errors for Email -->
-     
-    </div>
-
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input 
-        type="email" 
-        class="form-control" 
-        formControlName="email" 
-        name="email" 
-        required />
-      
-      <!-- Display Validation Errors for Email -->
-      <div *ngIf="signup.get('email')?.invalid && signup.get('email')?.touched" class="error">
-        <p *ngIf="signup.get('email')?.hasError('required')">Email is required</p>
-        <p *ngIf="signup.get('email')?.hasError('email')">Enter a valid email</p>
-      </div>
-    </div>
-
-    <!-- Password Field -->
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input 
-        type="password" 
-        class="form-control" 
-        formControlName="password"
-        name="password" 
-        required />
-      
-      <!-- Display Validation Errors for Password -->
-      <div *ngIf="signup.get('password')?.invalid && signup.get('password')?.touched" class="error">
-        <p *ngIf="signup.get('password')?.hasError('required')">Password is required</p>
-        <p *ngIf="signup.get('password')?.hasError('minlength')">Password must be at least 6 characters long</p>
-      </div>
-      
-    </div>
-    <div class="form-group">
-      <label for="phonenumber">Phone Number</label>
-      <input 
-        type="phonenumber" 
-        class="form-control" 
-        formControlName="phonenumber"
-        name="phonenumber" 
-        required />
-      
-      
-      
-    </div>
-
-    <button type="submit" [disabled]="signup.invalid" class="signup-button">Sign Up</button>
-  </form>
-
-  <p id="navigate">Already have an account? <button class="login-button" (click)="goTologin()">Login</button></p>
 </div>
