changes made in cards

--- a/Boutique-FE/src/app/999/viewninenineninecostumes/viewninenineninecostumes.component.html
+++ b/Boutique-FE/src/app/999/viewninenineninecostumes/viewninenineninecostumes.component.html
@@ -98,13 +98,13 @@
     </div>
 
     <!-- Customization -->
-    <div class="customization">
+    <!-- <div class="customization">
       <h3>Customization</h3>
       <textarea
         [(ngModel)]="customText"
         placeholder="Enter customization details..."
       ></textarea>
-    </div>
+    </div> -->
 
     <!-- Quantity & Actions -->
     <div class="actions">
