--- a/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.html
+++ b/Boutique-FE/src/pages/sareefolder/viewsaree/viewsaree.component.html
@@ -98,14 +98,14 @@
         <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
       </div>
       <!-- Customization -->
-      <div class="customization">
+      <!-- <div class="customization">
         <h3>Customization</h3>
         <textarea
           [(ngModel)]="customText"
          
           placeholder="Enter customization details..."
         ></textarea>
-      </div>
+      </div> -->
      
   
       <!-- Quantity & Actions -->
