--- a/Boutique-FE/src/app/halfsarees/viewhalfsaree/viewhalfsaree.component.html
+++ b/Boutique-FE/src/app/halfsarees/viewhalfsaree/viewhalfsaree.component.html
@@ -3,34 +3,43 @@
      <a [routerLink]="'/home'" class="home-link" style="cursor: pointer;">
        Home/ 
     </a>
-    <a [routerLink]="'/halfsaree'" class="home-link" style="cursor: pointer;">
-      HalfSaree
+    <a [routerLink]="'/momanddaughter'" class="home-link" style="cursor: pointer;">
+      MomAndDaughter
    </a>
   </p>
   
   
 </div>
 <div class="boutique-container" >
-
+ 
     <!-- Left Side: Image Gallery -->
     <div class="image-gallery">
       <!-- Large Display Image -->
       <div class="featured-image">
-        <img [src]=" url + itemData.imageUrl" alt="" class="featured-img" />
-      </div>
-  
-      <!-- Thumbnail Gallery -->
-      <div class="thumbnails">
-        <div
-          *ngFor="let image of smallImages"
-          class="thumbnail"
-          (click)="selectImage(image)"
-          [class.active]="image === selectedImage"
-        >
-          <img [src]="image" alt="" class="thumbnail-img" />
+        <div class="slider-wrapper" [ngStyle]="{'transform': 'translateX(-' + (currentIndex * 100) + '%)'}">
+          <img 
+            *ngFor="let img of itemData?.imageUrl" 
+            [src]="url + img" 
+            alt="Gallery Image" 
+            class="featured-img"
+          />
+        </div>
+      
+        <a href="https://app.epatrolz.com" class="hover-link" target="_blank">https://app.epatrolz.com</a>
+      
+        <!-- Indicator Dots -->
+        <div class="indicator-container">
+          <div 
+            *ngFor="let img of itemData?.imageUrl; let i = index" 
+            class="indicator-bar" 
+            [ngClass]="{'active': i === currentIndex}">
+          </div>
         </div>
       </div>
+    
+    
     </div>
+    
   
     <!-- Right Side: Product Details -->
     <div class="product-details">
@@ -54,7 +63,51 @@
         </div>
       </div>
   
-    
+      <div class="sizeguide" *ngIf="selectedProduct.stock > 0">
+        <button class="sizeguide-btn" (click)="openSizeGuide()">
+          <h3>Size Guide</h3>
+        </button>
+      </div>
+      
+      <!-- Popup Modal -->
+      <div class="size-modal" *ngIf="isSizeGuideOpen">
+        <div class="size-modal-content">
+          <span class="close-btn" (click)="closeSizeGuide()">&times;</span>
+          <h2>Size Guide</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>Size</th>
+                <th>Chest</th>
+                <th>Waist</th>
+                <th>Length</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let size of sizeGuide">
+                <td>{{ size.Size }}</td>
+                <td>{{ size.chest }}</td>
+                <td>{{ size.waist }}</td>
+                <td>{{ size.length }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="stock-status">
+        <p *ngIf="itemData.stock > 0" class="in-stock">In Stock</p>
+        <p *ngIf="itemData.stock === 0" class="out-of-stock">Out of Stock</p>
+      </div>
+
+      <!-- Customization -->
+      <div class="customization">
+        <h3>Customization</h3>
+        <textarea
+          [(ngModel)]="customText"
+          placeholder="Enter customization details..."
+        ></textarea>
+      </div>
   
       <!-- Quantity & Actions -->
       <div class="actions">
