--- a/Boutique-FE/src/layout/header/header.component.css
+++ b/Boutique-FE/src/layout/header/header.component.css
@@ -12,7 +12,26 @@ padding-bottom: 0px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .logo-container1 {
+      width: 100px;
+       height: 100px;
+     display: flex;
+     align-items: center;
+     gap: 10px;
+     
+     .logo {
+       
+       width: auto;
+       height: 100px;
+       border-radius: 50%;
+     }
 
+     .brand {
+       font-size: 1.5rem;
+       font-weight: bold;
+       color: #333;
+     }
+   }
     .logo-container {
        width: 100px;
         height: 100px;
