--- a/Boutique-FE/src/app/order-listing/order-listing.component.css
+++ b/Boutique-FE/src/app/order-listing/order-listing.component.css
@@ -105,4 +105,22 @@ body {
     color: #666;
     margin-top: 20px;
   }
+  .order-list-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+  }
+  
+  .btn-invoice {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+  }
   
