--- a/Boutique-FE/src/pages/homepage/homepage.component.css
+++ b/Boutique-FE/src/pages/homepage/homepage.component.css
@@ -41,6 +41,8 @@
   gap: 20px;
   margin-bottom: 10px;
   padding: 10px;
+  font-family: 'Poppins', sans-serif !important;
+  
 }
 
 /* Add scrolling for smaller screens */
@@ -134,8 +136,9 @@
 }
 
 .category-name {
-  font-size: 12px;
- font-family:  'Montserrat', sans-serif;;
+  font-size: 16px;
+  font-family: 'Poppins';
+
   /* font-weight: bold; */
   text-align: center;
 }
@@ -278,22 +281,22 @@ button:hover {
   .card-details {
     padding: 10px;
     text-align: start;
-    font-size: 12px;
+    font-size: 16px;
     color: #333;
   }
   
   .card-details h2 {
-    font-size: 14px;
+    font-size: 16px;
     margin: 10px 0;
   }
   
   .card-details p {
-    font-size: 14px;
+    font-size: 16px;
     color: #777;
   }
   
   .card-details .price {
-    font-size: 14px;
+    font-size: 16px;
     color: #e74c3c;
     font-weight: bold;
   }
