--- a/Boutique-FE/src/styles.css
+++ b/Boutique-FE/src/styles.css
@@ -8,5 +8,6 @@ body {
     font-size: 16px; /* Set a default font size */
     color: #333; /* Optional: Set a global text color */
     line-height: 1;
+    font-weight: 600;
   }
 
